Compiler/tests/good/Output/06_output.rs
// Single line comment
fn main(){
  println!(true);
  return;
}
