Compiler/tests/bad/Output/03_output.rs
// Single line comment
fn main(){
  println!("");
  return;
}
